# lskjema

./: .gitignore  dodo.py  lskjema.scheme.ttl  pyproject.toml
